--- a/index.html
+++ b/index.html
@@ -1,35 +1,116 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<meta charset="utf-8">
-	<!--Let browser know website is optimized for mobile-->
-	<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-	<title>Bitácora Flash</title>
-    
+    <meta charset="utf-8">
+    <!--Let browser know website is optimized for mobile-->
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+    <title>Bitácora Flash</title>
+
     <!--Import Google Icon Font-->
-	<link href="http://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-	<!--Import materialize.css-->
-	<link type="text/css" rel="stylesheet" href="assets/css/materialize.min.css"  media="screen,projection"/>
-	<!-- Css -->
-	<link rel="stylesheet" href="assets/css/main.css">	  
+    <link href="http://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <!--Import materialize.css-->
+    <link type="text/css" rel="stylesheet" href="assets/css/materialize.min.css"  media="screen,projection"/>
+    <!-- Css -->
+    <link rel="stylesheet" href="assets/css/main.css">	  
 </head>
 <body>
 
-	<!-- Fixed Action Button -->
-	<div class="fixed-action-btn horizontal">
-	    <a class="btn-floating btn-large pink darken-4">
-	      <i class="large material-icons">mode_edit</i>
-	    </a>
-	    <ul>
-	      <li><a class="btn-floating red lighten-2"><i class="material-icons">comment</i></a></li>
-	      <li><a class="btn-floating indigo lighten-2"><i class="material-icons">perm_media</i></a></li>
-	      <li><a class="btn-floating green lighten-"><i class="material-icons">publish</i></a></li>
-	      <li><a class="btn-floating purple lighten-2"><i class="material-icons">video_library</i></a></li>
-	    </ul>
-  	</div>
+    <header class="container center">
+        <h1>Bitácora Lemniscata</h1>
+        <p class="flow-text">"Publica comentarios y documentos."</p>
+    </header>
 
-	<!--Import jQuery before materialize.js-->
+    <!--  Sección para publicaciones  -->
+    <section class="container" id="publicaciones">
+
+    </section>
+
+    <!-- Fixed Action Button -->
+    <div class="fixed-action-btn horizontal">
+        <a class="btn-floating btn-large pink darken-4">
+            <i class="large material-icons">mode_edit</i>
+        </a>
+        <ul>
+            <li><a class="btn-floating red lighten-2" href="#msj_modal"><i class="material-icons">comment</i></a></li>
+            <li><a class="btn-floating indigo lighten-2" href="img_modal"><i class="material-icons">perm_media</i></a></li>
+            <li><a class="btn-floating purple lighten-2" href="video_modal"><i class="material-icons">video_library</i></a></li>
+        </ul>
+    </div>
+
+    <!-- Modal Structure -->
+    <div id="msj_modal" class="modal">
+        <div class="modal-content row">
+            <div class="col s12">
+                <div class="row">
+                    <div class="input-field col s12">
+                        <input id="modal-chat-title" type="text" class="validate" data-length="10" />
+                        <label for="title">Título</label>
+                    </div>
+                    <div class="input-field col s12">
+                        <textarea id="modal-chat-message" class="materialize-textarea"></textarea>
+                        <label for="message">Mensaje</label>
+                    </div>
+                    <button class="btn waves-effect waves-light right cyan accent-4" type="submit" name="action" data-publication="text">Publicar
+                        <i class="material-icons right">send</i>
+                    </button>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div id="img_modal" class="modal">
+        <div class="modal-content row">
+            <div class="col s12">
+                <div class="row">
+                    <div class="input-field col s12">
+                        <input id="modal-image-title" type="text" class="validate" data-length="10" />
+                        <label for="title">Título</label>
+                    </div>
+                    <div class="file-field input-field col s12">
+                        <div class="btn">
+                            <span>Imagen</span>
+                            <input type="file" accept="image/*" id="image-file">
+                        </div>
+                        <div class="file-path-wrapper">
+                            <input class="file-path validate" type="text">
+                        </div>
+                    </div>
+                    <button class="btn waves-effect waves-light right blue accent-2" type="submit" name="action" data-publication="image">Publicar
+                        <i class="material-icons right">send</i>
+                    </button>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div id="video_modal" class="modal">
+        <div class="modal-content row">
+            <div class="col s12">
+                <div class="row">
+                    <div class="input-field col s12">
+                        <input type="text" class="validate" data-length="10" id="modal-media-title" name="modal-media-title"
+                        />
+                        <label for="modal-media-title">Título</label>
+                    </div>
+                    <div class="file-field input-field col s12">
+                        <div class="btn">
+                            <span>Video o Audio</span>
+                            <input type="file" accept="video/mp4,video/x-m4v,video/*, audio/mp3, audio/*" id="media-file">
+                        </div>
+                        <div class="file-path-wrapper">
+                            <input class="file-path validate" type="text">
+                        </div>
+                    </div>
+                    <button class="btn waves-effect waves-light right amber accent-2" type="submit" name="action" data-publication="media">Publicar
+                        <i class="material-icons right">send</i>
+                    </button>
+                </div>
+            </div>
+        </div>
+    </div>
+
+
+    <!--Import jQuery before materialize.js-->
     <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
     <script type="text/javascript" src="assets/js/materialize.min.js"></script>
+    <script type="text/javascript" src="assets/js/app.js"></script>
 </body>
 </html>
